@@ -1,4 +1,4 @@
-.TH SDPARM "8" "February 2010" "sdparm\-1.05" SDPARM
+.TH SDPARM "8" "July 2010" "sdparm\-1.06" SDPARM
 .SH NAME
 sdparm \- access SCSI modes pages; read VPD pages; send simple SCSI commands.
 .SH SYNOPSIS
@@ -301,6 +301,13 @@ mapped within this utility to their corresponding sg device nodes. So if
 there is a SCSI disk at /dev/sda then 'sdparm /dev/sda' will work in both
 the lk 2.6 and lk 2.4 series. However if there is an ATAPI cd/dvd drive
 at /dev/hdc then 'sdparm /dev/hdc' will only work in the lk 2.6 series.
+.PP
+In the Linux 2.6 series, especially with ATA disks, using sdparm to
+stop (spin down) a disk may not be sufficient and other mechanisms will
+start the disk again some time later. The user might additionally mark
+the disk as "offline" with 'echo offline > /sys/block/sda/device/state' 
+where sda is the block name of the disk. To restart the disk "offline" 
+can be replaced with "running".
 .SH PARAMETERS
 In their simplest form the \fI\-\-clear\fR=, \fI\-\-get\fR= and
 \fI\-\-set\fR= options (or their short forms) take an acronym_name such
@@ -516,7 +523,7 @@ stop
 stops the medium (i.e. spins it down). Harmless if
 medium has already been stopped. See 'eject' command for supported device
 types. If the \fIDEVICE\fR is an ATA disk in Linux the '\-\-readonly'
-option may be required.
+option may be required. See the NOTES section above.
 .TP
 sync
 sends a SYNCHRONIZE CACHE command. The device should
