@@ -2,7 +2,7 @@ sdparm (1.06-0.1) unstable; urgency=low
 
   * see ChangeLog
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 24 Apr 2010 23:00:00 +0200
+ -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 31 Jul 2010 12:00:00 +0200
 
 sdparm (1.05-0.1) unstable; urgency=low
 
